# api-file-provider

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml  tox.ini
.github/workflows/: build_and_test.yml  publish_client.yml
api/: main.py  server.py  settings.py  utils.py
build_client/typescript/: package-lock.json  package.json
test/: conftest.py  test_api.py  test_utils.py
test/example_db/: default.json
