[build-system]
requires = ["poetry >= 0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "api"
version = "0.1.0"
description = "An API for downloading files from dataware-tools"
license = "Apache-2.0"
authors = [
    "Daiki Hayashi <hayashi.daiki@hdwlab.co.jp>"
]
readme = 'README.md'
repository = "https://github.com/dataware-tools/api-file-provider.git"
homepage = "https://github.com/dataware-tools/api-file-provider"
keywords = ['file', 'provider', 'dataware', 'api']
classifiers=[
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Operating System :: POSIX :: Linux",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.8"
dataware-tools-api-helper = { git = "https://github.com/dataware-tools/api-helper-python.git", branch = "master" }
responder = "^2.0.5"
pydtk = {git = "https://github.com/dataware-tools/pydtk.git", rev = "master", extras=["ros", "mongodb"]}
PyJWT = "^1.7.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
pytest = "^6.1.1"
tox = "^3.20.0"
